force-app/main/default/objects/CompetitorPresence__c/CompetitorPresence__c.object-meta.xml
<CustomObject>
    <label>Competitor Presence</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Presence Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Presence Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>