force-app/main/default/objects/CompetitorPresence__c/fields/CompetitorProduct__c.field-meta.xml
<CustomField>
    <fullName>CompetitorProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product</label>
    <referenceTo>CompetitorProduct__c</referenceTo>
    <relationshipLabel>Detected Presence</relationshipLabel>
    <relationshipName>DetectedPresence</relationshipName>
    <type>Lookup</type>
</CustomField>