force-app/main/default/objects/CompetitorPresence__c/fields/EstimatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>EstimatedQuantity__c</fullName>
    <label>Estimated Quantity (Units)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>