force-app/main/default/objects/CompetitorPresence__c/fields/ShelfAudit__c.field-meta.xml
<CustomField>
    <fullName>ShelfAudit__c</fullName>
    <label>Shelf Audit</label>
    <referenceTo>ShelfAudit__c</referenceTo>
    <relationshipLabel>Competitor Presence Records</relationshipLabel>
    <relationshipName>CompetitorPresenceRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>