force-app/main/default/objects/CompetitorPresence__c/fields/ShelfPosition__c.field-meta.xml
<CustomField>
    <fullName>ShelfPosition__c</fullName>
    <label>Shelf Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>