force-app/main/default/objects/CompetitorPresence__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Competitor Presence Records</relationshipLabel>
    <relationshipName>CompetitorPresenceRecords</relationshipName>
    <type>Lookup</type>
</CustomField>